--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -102,7 +102,6 @@
 <body>
     <div class="navbar-wrapper">
       <div class="container">
-
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
@@ -112,11 +111,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="project.html">Pod</a>
+              <center><a class="navbar-brand" href="project.html">Pod</a></center>
             </div>
           </div>
         </div>
-
       </div>
     </div>
 
