--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-
-
   <head>
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="bootstrap.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
+    <!-- Bootstrap JS relies on jQuery -->
+    <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="js/pod.js" type="text/javascript"></script>
   </head>
+  
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
@@ -25,62 +27,38 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
-	
-	<div class="page-header">
-  <p><h3>Door Status</h3></p>
-  <span id="doorStatus" class="label label-success">Fail</span>
-  
-  <div class="btn-group">
-  <button type="button" class="btn btn-default" onclick="doorsStatus(True)">Open Doors</button>
-  <button type="button" class="btn btn-default" onclick="doorsStatus(False)">Close Doors</button>
-  
-  
-<script>
+    <div class="page-header">
+      <p><h3>Door Status</h3></p>
+      <span id="doorStatus" class="label label-success">Fail</span>
 
-function doorsStatus() {
-	var request = new XMLHttpRequest();
-	var url = "http://10.150.85.50:8000/ignore=x";
-	request.open("GET", url, false);
-    request.send(null);
-	var data = JSON.parse(request.responseText);
-	//alert(data);
-	var doorIsOpen = data.houseStatus.doorsOpen;
-	var door = document.getElementById("doorStatus");
-	
-	if (doorIsOpen) {
-		door.innerHTML = "Open";
-	} else {
-		door.innerHTML = "Close";
-	}
-	
-	
-}
+      <div class="btn-group">
+        <button type="button" class="btn btn-default" onclick="doorsStatus(true)">Open Doors</button>
+        <button type="button" class="btn btn-default" onclick="doorsStatus(false)">Close Doors</button>
+      </div>
+    </div>
 
-doorsStatus();
+    <script type="text/javascript">
+      function doorsStatus() {
+        var responseText = XHRequest("ignore", "x");
+        
+        var data = JSON.parse(responseText);
+        var doorIsOpen = data.houseStatus.doorsOpen;
+        var door = document.getElementById("doorStatus");
 
-function doorChange(state){
+        if (doorIsOpen) {
+          door.innerHTML = "Open";
+        } else {
+          door.innerHTML = "Close";
+        }
+      }
 
+      doorsStatus();
 
-
-}
-
-
-
-
-
-
-</script>
-
-</body>
-</html>  
-  
-  
-  
-  
-  
-  
-  
-  
+      function doorChange(state){
+        
+      }
+    </script>
+  </body>
+</html>
