--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -4,13 +4,16 @@
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="bootstrap.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
+    <!-- Bootstrap JS relies on jQuery -->
+    <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="js/pod.js" type="text/javascript"></script>
   </head>
+  
   <body style="padding-left:20px">
-  		<h3>Pod</h3>
-    	<a href="project.html"><div class="btn btn-info">Home</div></a>
-	<script src="http://code.jquery.com/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <h3>Pod</h3>
+    <a href="project.html"><div class="btn btn-info">Home</div></a>
   </body>
 </html>
 
