--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -4,12 +4,16 @@
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="bootstrap.css" rel="stylesheet" media="screen">
+    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
+    <!-- Bootstrap JS relies on jQuery -->
+    <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="js/pod.js" type="text/javascript"></script>
   </head>
-
-  <div class="navbar-wrapper">
+  
+  <body>
+    <div class="navbar-wrapper">
       <div class="container">
-
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
           <div class="container">
             <div class="navbar-header">
@@ -23,8 +27,7 @@
             </div>
           </div>
         </div>
-
       </div>
     </div>
-  <body>
-  	
+  </body>
+</html>
