--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -4,13 +4,8 @@
     <title>Pod</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
-    <!-- Bootstrap JS relies on jQuery -->
-    <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
-    <script src="js/bootstrap.js" type="text/javascript"></script>
-    <script src="js/pod.js" type="text/javascript"></script>
+    <link href="bootstrap.css" rel="stylesheet" media="screen">
   </head>
-  
   <body>
     <div class="navbar-wrapper">
       <div class="container">
@@ -27,9 +22,9 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
-<<<<<<< HEAD
 	
 	<div class="page-header">
   <p><h3>Door Status</h3></p>
@@ -87,38 +82,3 @@ function doorChange(state){
   
   
   
-=======
-    <div class="page-header">
-      <p><h3>Door Status</h3></p>
-      <span id="doorStatus" class="label label-success">Fail</span>
-
-      <div class="btn-group">
-        <button type="button" class="btn btn-default" onclick="doorsStatus(true)">Open Doors</button>
-        <button type="button" class="btn btn-default" onclick="doorsStatus(false)">Close Doors</button>
-      </div>
-    </div>
-
-    <script type="text/javascript">
-      function doorsStatus() {
-        var responseText = XHRequest("ignore", "x");
-        
-        var data = JSON.parse(responseText);
-        var doorIsOpen = data.houseStatus.doorsOpen;
-        var door = document.getElementById("doorStatus");
-
-        if (doorIsOpen) {
-          door.innerHTML = "Open";
-        } else {
-          door.innerHTML = "Close";
-        }
-      }
-
-      doorsStatus();
-
-      function doorChange(state){
-        
-      }
-    </script>
-  </body>
-</html>
->>>>>>> HTML/JS-Tidy-up
