--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -29,5 +29,14 @@
         </div>
       </div>
     </div>
+	
+	<!--WEATHER PAGE GOING IN HERE going to just show a 7 sorta forecast thingy --> 
+	
+	
+	
+	
+	
+	
+	
   </body>
 </html>
