--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -43,23 +43,11 @@
   </div>
 </div> -->
 <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <center><a class="navbar-brand" href="project.html">Pod</a></center>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+   <ul class="nav nav-pills nav-stacked">
+    <li class="active"><a href="project.html">Home</a></li>
+  <li><a href="#">Profile</a></li>
+  <li><a href="#">Messages</a></li>
+   </ul>
 
 
     <!-- Carousel
