--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -31,12 +31,47 @@
     </div>
 	
 	<!--WEATHER PAGE GOING IN HERE going to just show a 7 sorta forecast thingy --> 
+		
+		
+		<table class="table table-hover">
+		<thead>
+			<tr>
+				<th>Row</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>Email</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>John</td>
+				<td>Carter</td>
+				<td>johncarter@mail.com</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Peter</td>
+				<td>Parker</td>
+				<td>peterparker@mail.com</td>
+			</tr>
+			<tr>
+				<td>3</td>
+				<td>John</td>
+				<td>Rambo</td>
+				<td>johnrambo@mail.com</td>
+			</tr>
+		</tbody>
+	</table>
+			
 	
 	
 	
 	
+	<script>
 	
 	
+	</script>
 	
   </body>
 </html>
