--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -43,63 +43,16 @@
   </div>
 </div> -->
 <body>
-   <ul class="nav nav-pills nav-stacked">
-    <li class="active"><a href="project.html">Home</a></li>
-  <li><a href="#">Profile</a></li>
+ <!-- <center>
+   <ul class="nav nav-pills">
+  <li class="active"><a href="#">Home</a></li><br><br>
+  <li><a href="#">Profile</a></li><br><br>
   <li><a href="#">Messages</a></li>
-   </ul>
+</ul>
+</center> -->
 
 
-    <!-- Carousel
-    ================================================== -->
-    <!-- <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="http://netdna.webdesignerdepot.com/uploads/2012/09/cloud.jpg" alt="First slide" style="height:250px">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div>-->
-
-
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
-
+  
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
@@ -122,7 +75,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <a href="doors.html"><img class="img-circle" src="http://i.imgur.com/i5cIKIg.jpg" style="width: 100px; height: 100px;"></a>
-          <h2>Door</h2>
+          <h2>Doors</h2>
           <p>Open and close your doors and windows.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
