--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -9,6 +9,7 @@
     <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </head>
   
   <body>
