--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -31,7 +31,9 @@
     </div>
 	
 	<!--WEATHER PAGE GOING IN HERE going to just show a 7 sorta forecast thingy --> 
-		
+	<div class="page-header">
+      <p><h3>Detailed weather for today <span id="todayWeather"></span></h3></p>
+    </div>	
 		
 		<table class="table table-hover">
 		<thead>
