--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -73,6 +73,25 @@
         XHRequest("doorIsOpen", state);
       }
     </script>
+
+    <form>
+<select>
+  <option>Upstairs</option>
+  <option>Downstairs</option>
+</select>
+</form>
+<br>
+<br>
+<select>
+  <option>Doors</option>
+  <option>Windows</option>
+</select>
+<br>
+<br>
+<form>
+<input type="radio" name="Open" value="Open">Open<br>
+<input type="radio" name="Open" value="Close">Close
+</form>
   </body>
 </html>  
   
