--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -43,13 +43,9 @@
   </div>
 </div> -->
 <body>
- <!-- <center>
-   <ul class="nav nav-pills">
-  <li class="active"><a href="#">Home</a></li><br><br>
-  <li><a href="#">Profile</a></li><br><br>
-  <li><a href="#">Messages</a></li>
+   <ul class="navbar">
+  <a href="#">Home</a> <a href="#">Profile</a> <a href="#">Messages</a></li>
 </ul>
-</center> -->
 
 
   
