--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -10,12 +10,16 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-  
-  <body style="padding-left:20px">
-    <h3>Pod</h3>
-    <a href="project.html"><div class="btn btn-info">Home</div></a>
 
-<!-- radial buttons w rooms on/off -->
+    <form>
+<select>
+  <option>Upstairs</option>
+  <option>Downstairs</option>
+</select>
+<br>
+<input type="radio" name="LightsOn" value="On">On<br>
+<input type="radio" name="LightsOn" value="Off">Off
+</form>
 
   </body>
 </html>
