--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -32,46 +32,23 @@
 	
 	<!--WEATHER PAGE GOING IN HERE going to just show a 7 sorta forecast thingy --> 
 	<div class="page-header">
-      <p><h3>Detailed weather for today <span id="todayWeather"></span></h3></p>
+      <p><h3>Detailed weather for today</h3></p>
     </div>	
 		
-		<table class="table table-hover">
-		<thead>
-			<tr>
-				<th>Row</th>
-				<th>First Name</th>
-				<th>Last Name</th>
-				<th>Email</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>1</td>
-				<td>John</td>
-				<td>Carter</td>
-				<td>johncarter@mail.com</td>
-			</tr>
-			<tr>
-				<td>2</td>
-				<td>Peter</td>
-				<td>Parker</td>
-				<td>peterparker@mail.com</td>
-			</tr>
-			<tr>
-				<td>3</td>
-				<td>John</td>
-				<td>Rambo</td>
-				<td>johnrambo@mail.com</td>
-			</tr>
-		</tbody>
-	</table>
+	<ul class="list-group">
+  <li class="list-group-item" id="weatherDescription"></li>
+  <li class="list-group-item">Dapibus ac facilisis in</li>
+  <li class="list-group-item">Morbi leo risus</li>
+  <li class="list-group-item">Porta ac consectetur ac</li>
+  <li class="list-group-item">Vestibulum at eros</li>
+</ul>
 			
 	
 	
 	
 	
-	<script>
-	
+	<script type="text/javascript">
+	getweather();
 	
 	</script>
 	
