--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -43,9 +43,7 @@
   </div>
 </div> -->
 <body>
-   <ul class="navbar">
-  <a href="#">Home</a> <a href="#">Profile</a> <a href="#">Messages</a></li>
-</ul>
+   
 
 
   
@@ -80,7 +78,7 @@
           <p>Control the temperature of your home.</p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
-          <img class="img-circle" src="http://i.imgur.com/2HeYUdi.jpg" style="width: 100px; height: 100px;">
+          <a href="settings.html"><img class="img-circle" src="http://i.imgur.com/2HeYUdi.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Settings</h2>
           <p>Change user information and mode.</p>
         </div><!-- /.col-lg-4 -->
