--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -10,7 +10,13 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-
+<ul class="nav nav-tabs">
+  <li>
+    <a href="project.html">Home</a>
+  </li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="#">...</a></li>
+</ul>
     <form>
 <select>
   <option>Upstairs</option>
