--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -12,23 +12,13 @@
   </head>
   
   <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="project.html">Pod</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ul class="nav nav-tabs">
+  <li>
+    <a href="project.html">Home</a>
+  </li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="#">...</a></li>
+</ul>
 	
 	<!--WEATHER PAGE GOING IN HERE going to just show a 7 sorta forecast thingy --> 
 	<div class="page-header">
