--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -9,27 +9,16 @@
     <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   </head>
   
   <body>
-    <div class="navbar-wrapper">
-      <div class="container">
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
-          <div class="container">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="project.html">Pod</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <ul class="nav nav-tabs">
+  <li>
+    <a href="project.html">Home</a>
+  </li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="#">...</a></li>
+</ul>
     
     <div class="page-header">
       <p><h3>Door Status</h3></p>
