--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -44,7 +44,13 @@
 </div> -->
 <body>
    
-
+  <ul class="nav nav-tabs">
+  <li class="active">
+    <a href="project.html">Home</a>
+  </li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="#">...</a></li>
+</ul>
 
   
     <div class="container marketing">
