--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -11,7 +11,13 @@
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
   <body>
-
+<ul class="nav nav-tabs">
+  <li>
+    <a href="project.html">Home</a>
+  </li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="#">...</a></li>
+</ul>
 <form>
 <input type="radio" name="sex" value="Holiday">Holiday mode<br>
 <p> This is a mode which limits power consumption for when you are away from home for a long period of time</p><br>
