--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -24,8 +24,10 @@
 	<div class="page-header">
       <p><h3>Detailed weather for today</h3></p>
     </div>	
-		
-	<ul class="list-group">
+	
+	<img name="iconx" src="">
+	
+<ul class="list-group">
   <li class="list-group-item" id="weatherDescription"></li>
   <li class="list-group-item">Dapibus ac facilisis in</li>
   <li class="list-group-item">Morbi leo risus</li>
@@ -36,11 +38,10 @@
 	
 	
 	
-	
-	<script type="text/javascript">
+<script type="text/javascript">
 	getweather();
-	
-	</script>
+	geticon(); 
+</script>
 	
   </body>
 </html>
