--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -25,7 +25,7 @@
       <p><h3>Detailed weather for today</h3></p>
     </div>	
 		
-	<ul class="list-group">
+	<ul class="list-group" style="margin-left:120px;">
   <li class="list-group-item" id="weatherDescription"></li>
   <li class="list-group-item">Dapibus ac facilisis in</li>
   <li class="list-group-item">Morbi leo risus</li>
