--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -17,12 +17,13 @@
   <li><a href="about.html">About</a></li>
   <li><a href="#">...</a></li>
 </ul>
-    <form>
-<select>
+
+<form style="margin-left:120px">
+<select style="margin-top:20px">
   <option>Upstairs</option>
   <option>Downstairs</option>
 </select>
-<br>
+<br><br>
 <input type="radio" name="LightsOn" value="On">On<br>
 <input type="radio" name="LightsOn" value="Off">Off
 </form>
