--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -30,7 +30,7 @@
 	
 	
 <ul class="list-group">
-  <li class="list-group-item" id="weatherDescription"></li>
+  <li class="list-group-item" id="weatherDescription" >Weather Description</li>
   <li class="list-group-item">Dapibus ac facilisis in</li>
   <li class="list-group-item">Morbi leo risus</li>
   <li class="list-group-item">Porta ac consectetur ac</li>
