--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -25,10 +25,9 @@
       <p><h3>Detailed weather for today</h3></p>
     </div>	
 	
-	<img name="iconx" src="">
 	
 <ul class="list-group">
-  <li class="list-group-item" id="weatherDescription"></li>
+  <li class="list-group-item"><img id="iconx" src=""/><span id="weatherDescription"></span></li>
   <li class="list-group-item">Dapibus ac facilisis in</li>
   <li class="list-group-item">Morbi leo risus</li>
   <li class="list-group-item">Porta ac consectetur ac</li>
@@ -40,7 +39,7 @@
 	
 <script type="text/javascript">
 	getweather();
-	geticon(); 
+	geticon();
 </script>
 	
   </body>
