Made a thing bold

--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -31,9 +31,8 @@
 	
 <ul class="list-group">
 
-  <li class="list-group-item" id="weatherDescription" >Weather Description</li>
+  <li class="list-group-item"><b>Weather Description </b> <span id="weatherDescription"</span></li>
 
-  <li class="list-group-item" id="weatherDescription"></li>
   <li class="list-group-item">Dapibus ac facilisis in</li>
   <li class="list-group-item">Morbi leo risus</li>
   <li class="list-group-item">Porta ac consectetur ac</li>
