Temp buttons stay pressed when clicked

--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -36,7 +36,7 @@
       <h3>Temperature</h3><small>Select a temperature for inside your home</small>
     </div>
 	
-    <div class="btn-group">
+    <div class="btn-group" data-toggle="buttons">
       <button type="button" class="btn btn-default" onclick="indoorTemp(15)">15&deg;C</button>
       <button type="button" class="btn btn-default" onclick="indoorTemp(16)">16&deg;C</button>
       <button type="button" class="btn btn-default" onclick="indoorTemp(17)">17&deg;C</button>
