They stay clicked

--- a/Webpage/temp.html
+++ b/Webpage/temp.html
@@ -37,17 +37,17 @@
     </div>
 	
     <div class="btn-group" data-toggle="buttons">
-      <button type="button" class="btn btn-default" onclick="indoorTemp(15)">15&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(16)">16&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(17)">17&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(18)">18&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(19)">19&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(20)">20&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(21)">21&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(22)">22&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(23)">23&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(24)">24&deg;C</button>
-      <button type="button" class="btn btn-default" onclick="indoorTemp(25)">25&deg;C</button>
+      <label class="btn btn-default" onclick="indoorTemp(15)"><input type="radio">15&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(16)"><input type="radio">16&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(17)"><input type="radio">17&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(18)"><input type="radio">18&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(19)"><input type="radio">19&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(20)"><input type="radio">20&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(21)"><input type="radio">21&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(22)"><input type="radio">22&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(23)"><input type="radio">23&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(24)"><input type="radio">24&deg;C</input></label>
+      <label class="btn btn-default" onclick="indoorTemp(25)"><input type="radio">25&deg;C</input></label>
     </div>
 	
     <script type="text/javascript">
