--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -21,17 +21,19 @@
 </ul>
 	
 	<!--WEATHER PAGE GOING IN HERE going to just show a 7 sorta forecast thingy --> 
-	<img name="iconx" src="">
+	
 	
 	<div class="page-header">
       <p><h3>Detailed weather for today</h3></p>
+	   <img name="iconx" src=""> 
     </div>	
 	<ul class="list-group" style="margin-left:120px;">
 	
 	
 <ul class="list-group">
-  <li class="list-group-item"><b>Weather Description </b> <span id="weatherDescription"</span></li>
-  <li class="list-group-item"><img id="iconx" src=""/><span id="weatherDescription"></span></li>
+
+  <li class="list-group-item"><b>Weather Description: </b> <span id="weatherDescription"</span></li>
+ 
   <li class="list-group-item">Dapibus ac facilisis in</li>
   <li class="list-group-item">Morbi leo risus</li>
   <li class="list-group-item">Porta ac consectetur ac</li>
