--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -24,8 +24,7 @@
 	
 	
 	<div class="page-header">
-      <p><h3>Detailed weather for today</h3></p>
-	   <img name="iconx" src=""> 
+      <p><h3><img id="iconx" src="">&nbsp;&nbsp;Detailed weather for today</h3></p>
     </div>	
 	<ul class="list-group" style="margin-left:120px;">
 	
