--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -12,12 +12,17 @@
   </head>
   
   <body>
-    <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs">
   <li>
     <a href="project.html">Home</a>
   </li>
   <li><a href="about.html">About</a></li>
-  <li><a href="#">...</a></li>
+  <li><a href="weather.html">Weather</a></li>
+  <li><a href="lights.html">Lights</a></li>
+  <li><a href="power.html">Power</a></li>
+  <li  class="active"><a href="doors.html">Doors</a></li>
+  <li><a href="temp.html">Temperature</a></li>
+  <li><a href="settings.html">Settings</a></li>
 </ul>
     
     <div class="page-header">
