--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -16,7 +16,12 @@
     <a href="project.html">Home</a>
   </li>
   <li><a href="about.html">About</a></li>
-  <li><a href="#">...</a></li>
+  <li><a href="weather.html">Weather</a></li>
+  <li><a href="lights.html">Lights</a></li>
+  <li><a href="power.html">Power</a></li>
+  <li><a href="doors.html">Doors</a></li>
+  <li><a href="temp.html">Temperature</a></li>
+  <li  class="active"><a href="settings.html">Settings</a></li>
 </ul>
 <form>
 <input type="radio" name="sex" value="Holiday">Holiday mode<br>
