--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -10,12 +10,18 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
+
 <ul class="nav nav-tabs">
   <li>
     <a href="project.html">Home</a>
   </li>
   <li><a href="about.html">About</a></li>
-  <li><a href="#">...</a></li>
+  <li><a href="weather.html">Weather</a></li>
+  <li class="active"><a href="lights.html">Lights</a></li>
+  <li><a href="power.html">Power</a></li>
+  <li><a href="doors.html">Doors</a></li>
+  <li><a href="temp.html">Temperature</a></li>
+  <li><a href="settings.html">Settings</a></li>
 </ul>
 
 <form style="margin-left:120px">
