--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -16,6 +16,10 @@
     <a href="project.html">Home</a>
   </li>
   <li><a href="about.html">About</a></li>
-  <li><a href="#">...</a></li>
+  <li><a href="weather.html">Weather</a></li>
+  <li><a href="lights.html">Lights</a></li>
+  <li class="active"><a href="power.html">Power</a></li>
+  <li><a href="doors.html">Doors</a></li>
+  <li><a href="temp.html">Temperature</a></li>
+  <li><a href="settings.html">Settings</a></li>
 </ul>
-
