--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -10,7 +10,7 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body style="background-color:black; color:white;">
   	<!--	<h3>Pod</h3>
 
     	<a href="lights.html"><div class="btn btn-info">Lights</div></a>
@@ -44,13 +44,13 @@
 </div> -->
 <body>
    
-  <ul class="nav nav-tabs">
+  <!-- <ul class="nav nav-tabs">
   <li class="active">
     <a href="project.html">Home</a>
   </li>
   <li><a href="about.html">About</a></li>
   <li><a href="#">...</a></li>
-</ul>
+</ul> -->
 
   
     <div class="container marketing">
