Fixed about page & made homepage responsive

--- a/Webpage/project.html
+++ b/Webpage/project.html
@@ -58,32 +58,32 @@
       <!-- Three columns of text below the carousel -->
       <center>
       <div class="row" style="margin-top:30px">
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <a href="weather.html"><img class="img-circle" src="http://i.imgur.com/s2AIbEM.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Weather</h2>
           <p>Check the weather at your home.</p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <a href="lights.html"><img class="img-circle" src="http://i.imgur.com/y4cdFTM.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Lighting</h2>
           <p>Turn lights on and off.</p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <a href="power.html"><img class="img-circle" src="http://i.imgur.com/jMNRGzh.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Power</h2>
           <p>View and manage power consumption.</p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <a href="doors.html"><img class="img-circle" src="http://i.imgur.com/i5cIKIg.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Doors</h2>
           <p>Open and close your doors and windows.</p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <a href="temp.html"><img class="img-circle" src="http://i.imgur.com/ByjVYbI.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Temperature</h2>
           <p>Control the temperature of your home.</p>
         </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
+        <div class="col-lg-4 col-md-6 col-sm-6">
           <a href="settings.html"><img class="img-circle" src="http://i.imgur.com/2HeYUdi.jpg" style="width: 100px; height: 100px;"></a>
           <h2>Settings</h2>
           <p>Change user information and mode.</p>
