--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -27,8 +27,8 @@
 <form style="margin-left:120px">
 
 <br><br>
-<label class="btn btn-default" onclick="PowerOn(true)"><input type="radio">Lights On</input></label>
-<label class="btn btn-default" onclick="PowerOn(false)"><input type="radio">Lights Off</input></label
+<label class="btn btn-default" onclick="PowerOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
+<label class="btn btn-default" onclick="PowerOn(false)" name="sex"><input type="radio" name="sex" value="Off">Lights Off</input></label
 </form>
 
   </body>
