Made about page better

--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -1,1 +1,9 @@
-<swag>bro</swag>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
+	</head>
+	<body>
+		<swag class="swag">bro</swag>
+	</body>
+</html>
