Made the about page more subtle
I spent way longer than I should have doing this. I regret nothing.

--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -4,6 +4,12 @@
 		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
 	</head>
 	<body>
-		<swag class="swag">bro</swag>
+		<swag class="swagM">
+			<swag class="swagR">
+				<swag class="swag">
+					bro
+				</swag>
+			</swag>
+		</swag>
 	</body>
 </html>
