--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -2,14 +2,31 @@
 <html>
 	<head>
 		<link href="css/bootstrap.css" rel="stylesheet" media="screen">
+		<script src="js/jquery-1.11.1.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<swag class="swagM">
+		<swag id="swag" class="swagM">
 			<swag class="swagR">
 				<swag class="swag">
+					<!-- This might actually be an interesting
+							background effect if I tuned down the colour
+							and timing so it was a lot more subtle,
+							and wrote "pod" instead of "bro". -->
 					bro
 				</swag>
 			</swag>
 		</swag>
+		
+		<script type="text/javascript">
+			var swag = $('#swag');
+			
+			function addBro() {
+				var moreswag = swag.clone();
+				moreswag.appendTo('body');
+				moreswag.css({left:Math.random() * window.innerWidth,top:Math.random() * window.innerHeight, color: "#"+((1<<24)*Math.random()|0).toString(16)})
+			}
+			
+			setInterval(addBro, 500);
+		</script>
 	</body>
 </html>
