--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Pod</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.css" rel="stylesheet" media="screen">
+    <!-- Bootstrap JS relies on jQuery -->
+    <script src="js/jquery-1.11.1.js" type="text/javascript"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
+    <script src="js/pod.js" type="text/javascript"></script>
+  </head>
+  <body>
+<ul class="nav nav-tabs">
+  <li>
+    <a href="project.html">Home</a>
+  </li>
+  <li   class="active"><a href="about.html">About</a></li>
+  <li><a href="weather.html">Weather</a></li>
+  <li><a href="lights.html">Lights</a></li>
+  <li><a href="power.html">Power</a></li>
+  <li><a href="doors.html">Doors</a></li>
+  <li><a href="temp.html">Temperature</a></li>
+  <li><a href="settings.html">Settings</a></li>
+</ul>
+
 bro
