Added pressure into weather page
currently filling the detailed weather page with stuff which noone ever
needs unless theyre sailing . or really fascinated by barometric
pressure.
also the about page is hella rad

--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -36,8 +36,8 @@
 	
 <ul class="list-group">
 
-  <li class="list-group-item"><b>Weather Description: </b> <span id="weatherDescription"</span></li>
-  <li class="list-group-item">Dapibus ac facilisis in</li>
+  <li class="list-group-item"><b>Weather Description: </b> <span id="weatherDescription"></span></li>
+  <li class="list-group-item"><b>Barometric Pressure: </b> <span id="currentPressure"></span> mBar</li>
   <li class="list-group-item">Morbi leo risus</li>
   <li class="list-group-item">Porta ac consectetur ac</li>
   <li class="list-group-item">Vestibulum at eros</li>
@@ -48,6 +48,7 @@
 <script type="text/javascript">
 	getweather();
 	geticon();
+	getPressure(); 
 </script>
 	
   </body>
