--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -11,7 +11,7 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body style="background-color:black; color:white;">
 <ul class="nav nav-tabs">
   <li>
     <a href="project.html">Home</a>
