--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -10,7 +10,8 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-
+  
+<body style="background-color:black; color:white;">
 <ul class="nav nav-tabs">
   <li>
     <a href="project.html">Home</a>
