--- a/Webpage/power.html
+++ b/Webpage/power.html
@@ -10,7 +10,7 @@
     <script src="js/bootstrap.js" type="text/javascript"></script>
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
-
+<body style="background-color:black; color:white;">
   <ul class="nav nav-tabs">
   <li>
     <a href="project.html">Home</a>
@@ -23,3 +23,4 @@
   <li><a href="temp.html">Temperature</a></li>
   <li><a href="settings.html">Settings</a></li>
 </ul>
+</body>
