--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -11,7 +11,7 @@
     <script src="js/pod.js" type="text/javascript"></script>
   </head>
   
-  <body>
+  <body style="background-color:black; color:white;">
   <ul class="nav nav-tabs">
   <li>
     <a href="project.html">Home</a>
@@ -29,12 +29,12 @@
 	
 	
 	<div class="page-header">
-      <p><h3><img id="iconx" src="">&nbsp;&nbsp;Detailed weather for today for <span id="APILocation"></span></h3></p>
+      <p><h3><img id="iconx" src="">&nbsp;&nbsp;Detailed current weather for <span id="APILocation"></span></h3></p>
     </div>	
 	<ul class="list-group" style="margin-left:120px;">
 	
 	
-<ul class="list-group">
+<ul class="list-group" style="color:black;">
 
   <li class="list-group-item"><b>Weather Description: </b> <span id="weatherDescription"></span></li>
   <li class="list-group-item"><b>Temperature:</b> <span id="OutdoorTemp"></span>&deg;C</li>
