i still cant believe i stepped on a seagull

--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -34,6 +34,16 @@
 <p> This is a mode for when you are out of the house - for example during work.</p>
 
 </form>
+<br>
+<br>
+<h3> change location </h3>
 
+<h4><b>current location: </b><span id="APILocation"></span></h4>
+
+<script>
+getLocationFromAPI();
+</script>
 </body>
+
+
 </html>
