--- a/Webpage/about.html
+++ b/Webpage/about.html
@@ -14,15 +14,15 @@
   <body style="background-color:black; color:white;">
 <ul class="nav nav-tabs">
   <li>
-    <a href="project.html">Home</a>
+    <a href="project.html"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
   </li>
-  <li   class="active"><a href="about.html">About</a></li>
-  <li><a href="weather.html">Weather</a></li>
-  <li><a href="lights.html">Lights</a></li>
-  <li><a href="power.html">Power</a></li>
-  <li><a href="doors.html">Doors</a></li>
-  <li><a href="temp.html">Temperature</a></li>
-  <li><a href="settings.html">Settings</a></li>
+  <li   class="active"><a href="about.html"><img src="http://i.imgur.com/jLycrQ5.jpg"></a></li>
+  <li><a href="weather.html"><img src="http://i.imgur.com/s2AIbEM.jpg"></a></li>
+  <li><a href="lights.html"><img src="http://i.imgur.com/y4cdFTM.jpg"></a></li>
+  <li><a href="power.html"><img src="http://i.imgur.com/jMNRGzh.jpg"></a></li>
+  <li><a href="doors.html"><img src="http://i.imgur.com/i5cIKIg.jpg"></a></li>
+  <li><a href="temp.html"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
+  <li><a href="settings.html"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
 
 	<head>
@@ -37,7 +37,7 @@
 							background effect if I tuned down the colour
 							and timing so it was a lot more subtle,
 							and wrote "pod" instead of "bro". -->
-					bro
+					pod
 				</swag>
 			</swag>
 		</swag>
