--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -24,21 +24,21 @@
   <li><a href="temp.html"  title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
   <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
-    
+
     <div class="page-header">
       <p><h3>Door Status</h3></p>
     </div>
-    
+    <div class="container">
+    <div class="alert alert-warning" role="alert" id="Alert"></div>
     <span id="doorStatus" class="label label-success">Fail</span>
     <div class="btn-group">
-      <button type="button" class="btn btn-default" onclick="doorsStatus(true)">Open Doors</button>
-      <button type="button" class="btn btn-default" onclick="doorsStatus(false)">Lock Doors</button>
+      <button type="button" class="btn btn-primary" onclick="doorsStatus(true)">Open Doors</button>
+      <button type="button" class="btn btn-danger" onclick="doorsStatus(false)">Lock Doors</button>
     </div>
     <!-- I thought it would make more sense to say lock doors than close doors? but for the purposes of showing in minecraft we can have the door open or closed-->
     <br/>
     <br/>
-    <br/>
-    <div class="alert alert-warning" role="alert" id="Alert"></div> 
+    <br/> 
     <script type="text/javascript">
       function doorsStatus() {
         var responseText = XHRequest("ignore", "x");
@@ -86,6 +86,7 @@
 <input type="radio" name="Open" value="Open">Open<br>
 <input type="radio" name="Open" value="Close">Close
 </form>
+</div>	
   </body>
 </html>  
   
