--- a/Webpage/weather.html
+++ b/Webpage/weather.html
@@ -14,15 +14,15 @@
   <body style="background-color:black; color:white;">
   <ul class="nav nav-tabs">
   <li>
-    <a href="project.html"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
+    <a href="project.html" title="Home"><img src="http://i.imgur.com/pRt9NhZ.jpg"></a>
   </li>
-  <li><a href="about.html"><img src="http://i.imgur.com/jLycrQ5.jpg"></a></li>
-  <li class="active"><a href="weather.html"><img src="http://i.imgur.com/s2AIbEM.jpg"></a></li>
-  <li><a href="lights.html"><img src="http://i.imgur.com/y4cdFTM.jpg"></a></li>
-  <li><a href="power.html"><img src="http://i.imgur.com/jMNRGzh.jpg"></a></li>
-  <li><a href="doors.html"><img src="http://i.imgur.com/i5cIKIg.jpg"></a></li>
-  <li><a href="temp.html"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
-  <li><a href="settings.html"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
+  <li><a href="about.html" title="About"><img src="http://i.imgur.com/W38JOgd.jpg"></a></li>
+  <li class="active"><a href="weather.html" title="Weather"><img src="http://i.imgur.com/s2AIbEM.jpg"></a></li>
+  <li><a href="lights.html" title="Lights"><img src="http://i.imgur.com/y4cdFTM.jpg"></a></li>
+  <li><a href="power.html" title="Power"><img src="http://i.imgur.com/jMNRGzh.jpg"></a></li>
+  <li><a href="doors.html" title="Doors"><img src="http://i.imgur.com/i5cIKIg.jpg"></a></li>
+  <li><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
+  <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
 	
 	<!--WEATHER PAGE GOING IN HERE going to just show a 7 sorta forecast thingy --> 
