--- a/Webpage/doors.html
+++ b/Webpage/doors.html
@@ -24,68 +24,44 @@
   <li><a href="temp.html"  title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
   <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
-
-    <div class="page-header">
-      <p><h3>Door Status</h3></p>
-    </div>
     <div class="container">
-    <div class="alert alert-warning" role="alert" id="Alert"></div>
-    <span id="doorStatus" class="label label-success">Fail</span>
-    <div class="btn-group">
-      <button type="button" class="btn btn-primary" onclick="doorsStatus(true)">Open Doors</button>
-      <button type="button" class="btn btn-danger" onclick="doorsStatus(false)">Lock Doors</button>
+    <div class="page-header-container">
+      <p><h3>Door Status <span id="doorStatus" class="label label-success">Fail</span>
+</h3></p>
     </div>
-    <!-- I thought it would make more sense to say lock doors than close doors? but for the purposes of showing in minecraft we can have the door open or closed-->
+    <div class="alert alert-warning alert-dismissible" role="alert" id="Alert" style="display: none">
+		<button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+		<span id="alertContent">Warning! Your doors are open!</span>
+	</div>
+    <div class="btn-group btn-group-unmargin">
+      <button type="button" class="btn btn-primary" onclick="doorChange(true)">Open Doors</button>
+      <button type="button" class="btn btn-danger" onclick="doorChange(false)">Lock Doors</button>
+    </div>
     <br/>
     <br/>
     <br/> 
     <script type="text/javascript">
       function doorsStatus() {
-        var responseText = XHRequest("ignore", "x");
-        var data = JSON.parse(responseText);
-        var doorIsOpen = data.houseStatus.doorsOpen;
-        //need data to be send saying whether user is in house
-        //var userOutside = data.houseStatus.userNotInHouse
-        var door = document.getElementById("doorStatus");
-
-        if (doorIsOpen) {
-          //if (userOutside){
-            //call python script to send alert text
-          //}	
-          var ShowAlert = document.GetElementbyId("Alert");
-          ShowAlert.innerHTML = "<b>Alert!</b> You have gone half an hour without locking your door"
-          
-          door.innerHTML = "Open";
-        } else {
-          door.innerHTML = "Locked";
-        }
-      }
+		var responseText = XHRequest("ignore", "x");
+		var data = JSON.parse(responseText);
+		
+		var doorOpen = data.houseStatus.doorsOpen;
+		
+		$('#doorStatus').html( doorOpen ? "Open" : "Closed" );
+		
+		if (doorOpen)
+			$('#Alert').show();
+		else
+			$('#Alert').hide();
+	  }
 
       doorsStatus();
 
       function doorChange(state){
-        XHRequest("doorIsOpen", state);
+        XHRequest("doorsOpen", state);
+		doorsStatus();
       }
     </script>
-
-    <form>
-<select>
-  <option>Upstairs</option>
-  <option>Downstairs</option>
-</select>
-</form>
-<br>
-<br>
-<select>
-  <option>Doors</option>
-  <option>Windows</option>
-</select>
-<br>
-<br>
-<form>
-<input type="radio" name="Open" value="Open">Open<br>
-<input type="radio" name="Open" value="Close">Close
-</form>
 </div>	
   </body>
 </html>  
