--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -25,7 +25,7 @@
   <li><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
 
-<form style="margin-left:120px">
+<form>
 
 <br><br>
 <label class="btn btn-default" onclick="PowerOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
