--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -25,7 +25,7 @@
 </ul>
 <form>
 <input type="radio" name="sex" value="Holiday" onclick="changeMode(holiday)">Holiday mode<br>
-<p> This is a mode which limits power consumption for when you are away from home for a long period of time</p><br>
+<p> This is a mode which turns off the power in your home for when you are away for a long period of time</p><br>
 <input type="radio" name="sex" value="Day" onclick="changeMode(day)">Day mode<br>
 <p> This is a mode for everyday living during the day. It limits light use but does not restrict power usage.</p><br>
 <input type="radio" name="sex" value="Night" onclick="changeMode(night)">Night mode <br>
