--- a/Webpage/lights.html
+++ b/Webpage/lights.html
@@ -28,14 +28,14 @@
 <form>
 
 <br><br>
-<label class="btn btn-default" onclick="PowerOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
-<label class="btn btn-default" onclick="PowerOn(false)" name="sex"><input type="radio" name="sex" value="Off">Lights Off</input></label
+<label class="btn btn-default" onclick="LightsOn(true)" name="sex"><input type="radio" name="sex" value="On">Lights On</input></label>
+<label class="btn btn-default" onclick="LightsOn(false)" name="sex"><input type="radio" name="sex" value="Off">Lights Off</input></label
 </form>
 
   </body>
   
   <script>
-  PowerOn();
+  LightsOn();
   </script>
   
 </html>
