--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -23,7 +23,7 @@
   <li><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
   <li class="active"><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
-<form>
+<form style="margin-top:20px">
 <input type="radio" name="sex" value="Holiday">Holiday mode<br>
 <p> This is a mode which limits power consumption for when you are away from home for a long period of time</p><br>
 <input type="radio" name="sex" value="Day">Day mode<br>
