--- a/Webpage/settings.html
+++ b/Webpage/settings.html
@@ -23,17 +23,10 @@
   <li><a href="temp.html" title="Temperature"><img src="http://i.imgur.com/ByjVYbI.jpg"></a></li>
   <li class="active"><a href="settings.html" title="Settings"><img src="http://i.imgur.com/2HeYUdi.jpg"></a></li>
 </ul>
-<<<<<<< HEAD
 <form style="margin-top:20px">
-<input type="radio" name="sex" value="Holiday">Holiday mode<br>
-<p> This is a mode which limits power consumption for when you are away from home for a long period of time</p><br>
-<input type="radio" name="sex" value="Day">Day mode<br>
-=======
-<form>
 <input type="radio" name="sex" value="Holiday" onclick="changeMode(holiday)">Holiday mode<br>
 <p> This is a mode which turns off the power in your home for when you are away for a long period of time</p><br>
 <input type="radio" name="sex" value="Day" onclick="changeMode(day)">Day mode<br>
->>>>>>> origin/master
 <p> This is a mode for everyday living during the day. It limits light use but does not restrict power usage.</p><br>
 <input type="radio" name="sex" value="Night" onclick="changeMode(night)">Night mode <br>
 <p> This is a mode for during the night. It does not limit light usage, but does limit power usage.</p><br>
@@ -78,7 +71,7 @@
 	});
 </script>
 
-<h4><b>current location: </b><span id="APILocation"></span></h4>
+<h4><b>Current location: </b><span id="APILocation"></span></h4>
 <!--
 <form name="input" action="demo_form_action.asp" method="get">
 Username: <input type="text" name="user">
