Upgraded server; supports power
Twilio calls also adjusted to give more information

--- a/Python Server/Test.html
+++ b/Python Server/Test.html
@@ -48,6 +48,9 @@
 			<hr/>
 			<button onclick="s('poweron', true)">Power on</button>
 			<button onclick="s('poweron', false)">Power off</button>
+			<hr/>
+			<button onclick="s('lightson', true)">Lights on</button>
+			<button onclick="s('lightson', false)">Lights off</button>
 		</div>
 	</body>
 </html>
